--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,8 @@ nav{
 #classforEpcot img{
     margin-right: 50px;
     display: block;
-    height: auto;
+    height: 175px;
+    width: 200px;
     
 }
 
@@ -155,6 +156,7 @@ div.grid-container{
     border-left: 1px solid #add8e6;
     border-bottom: 1px solid #add8e6;
     border-right: 1px solid #add8e6;
+    width: 200px;
     
     
 }
