--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,7 @@ nav{
 #classforEpcot img{
     margin-right: 50px;
     display: block;
-    height: 175px;
+    min-height: 200px;
     width: 200px;
     
 }
