--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ div.Me.Through.the.Years.at.Walt.Disney.World{
     color:#add8e6;
     background-color: #113ccf;
     font-weight: bold;
+    font-style: italic;
 }
 
 #ClassforIndex img, object, embed{
