--- a/css/style.css
+++ b/css/style.css
@@ -204,17 +204,19 @@ div.grid-container{
 footer{
     border: 2px solid grey;
     font-family: 'Mouse Memoirs', sans-serif;
-	margin: 10px 0;
+	margin: 10px;
     color: #add8e6;
     background-color: black;
     text-align: center;
     bottom:0;
     left:0;
     padding: 20px;
+    margin-bottom: 0;
+    
 }
 
 
-@media screen and (min-width: 760px){
+@media screen and (min-width: 768px){
     div.Me.Through.the.Years.at.Walt.Disney.World{
         justify-content: center;
     }
@@ -224,6 +226,15 @@ footer{
         height: 300px;
     }
     
+
+    ul#nav-items{
+        display:flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        
+        
+        
+    }
 
     div.Me.Through.the.Years.at.Walt.Disney.World{
         display: flex;
@@ -285,32 +296,31 @@ footer{
     }
     
     #classforEpcot img{
-        width: 800px;
-        justify-items: center;
-        align-items: center;
-        justify-content: center;
+        min-width: 768px;
+        margin-left: 20px;
+        margin-right: 15px;
         padding: 20px;
-        margin: 10px;
+    
         
         
     }
 
     div.grid-item{
-        min-width: 800px;
+        width: 100%;
         background-color: #113ccf;
         padding: 10px;
+    
+    
        
+    
 
     }
 
-.grid-item{
-    
-    background-color: #113ccf;
+    #classforEpcot p{
+        font-size: 40px;
+    }
 
-    
-    
-    
-}
+
 
     div.grid-container{
         display: grid;
@@ -329,4 +339,4 @@ footer{
         padding-bottom: 25px;
     }
     
-   
+}
