--- a/css/style.css
+++ b/css/style.css
@@ -230,7 +230,7 @@ footer{
     }
     
 
-    ul#nav-items{
+    ul.nav-items{
         display:flex;
         flex-direction: row;
         justify-content: space-evenly;
