--- a/css/style.css
+++ b/css/style.css
@@ -11,15 +11,6 @@
     background-image: url('../imgs/stars.jpg')
 }
 
-.parallax {
-    min-height: 500px;
-  
-    /* Create the parallax scrolling effect */
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
 
 h2{
     padding-bottom: 50px;
@@ -54,6 +45,51 @@ div.Me.Through.the.Years.at.Walt.Disney.World{
 }
 
 
+.flip-card {
+    background-color: transparent;
+    width: 300px;
+    height: 200px;
+    border: 1px solid #f1f1f1;
+    text-align: center;
+    justify-content: center;
+    margin:auto;
+}
+
+.flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+  }
+
+  .flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+  }
+
+
+  .flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+
+  }
+
+  .flip-card-front {
+    background-color: #bbb;
+    color: black;
+  }
+
+
+  .flip-card-back {
+    color: white;
+    transform: rotateY(180deg);
+    background-color: #113ccf;
+  }
+
+
 
 
 #ClassforIndex h2{
@@ -61,6 +97,35 @@ div.Me.Through.the.Years.at.Walt.Disney.World{
     color: #000;
     text-align: center;
 }
+
+#classforgallery h2{
+    font-family: 'Mouse Memoirs', sans-serif;
+    color: #000;
+    text-align: center;
+    font-size: 100px;
+}
+
+#classforgallery h3{
+    font-family: 'Mouse Memoirs', sans-serif;
+    text-align: center;
+    font-size: 25px;
+    padding-top: 50px;
+}
+
+
+#classforgallery{
+    background-color: #add8e6;
+}
+
+#classforgallery h1{
+    font-family: 'Mouse Memoirs', sans-serif;
+    text-align: center;
+    font-size: 100px;
+}
+
+
+
+
 
 nav{
     display: flex;
