--- a/css/style.css
+++ b/css/style.css
@@ -8,22 +8,20 @@
     padding-top: 40px;
     margin-bottom: 50px;
     margin-top: 50px;
-    background-image: url('../imgs/stars.jpg');
+    background-image: URL('../imgs/stars.jpg');
     background-color: #113ccf;
 }
 
-.parralax{
-    padding-left: 0px;
-    padding-right:0px;
-    padding-bottom: 30px;
-    background-attachment: fixed;
-    background-position: center;
-    background-size:cover;
-    height:380px;
-    background-image: URL('../imgs/contactform.jpg');
-    background-repeat: no-repeat
-}
 
+.parallax{
+    padding-left:0px;
+    padding-right: 0px;
+    padding-bottom: 30px;
+    height: 380px;
+    background-image: URL('../imgs/contactform.jpeg');
+    display: block;
+    overflow:hidden;
+}
 
 
 
@@ -366,20 +364,22 @@ b{
 }
 
 input{
-    width: 100%;
+    width: 50%;
     padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
     border: 1px solid #ccc;
     box-sizing: border-box;
     margin-bottom: 100px;
 }
 
 textarea#msg{
-    width:100%;
+    width:50%;
     padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
     border: 1px solid #ccc;
     box-sizing: border-box;
     margin-bottom: 100px;
@@ -390,10 +390,12 @@ button{
     font-family: 'Mouse Memoirs', sans-serif;
     padding: 15px 32px;
     text-align: center;
-    display: inline-block;
+    display: block;
     font-size: 30px;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-    width: 100%;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 50px;
     
 }
@@ -561,9 +563,7 @@ button{
 }
 
 @media screen and (min-width: 1440px) {
-    .parallax {
-      background-attachment: scroll;
-    }
+  
    
     #ClassforIndex img, object, embed {
         width: 300px;
@@ -623,12 +623,27 @@ button{
         font-size: 40px;
     }
 
+    .parallax{
+        padding-left: 0px;
+        padding-right:0px;
+        padding-bottom: 30px;
+        background-attachment: fixed;
+        background-position: center;
+        background-size:cover;
+        height:380px;
+        background-image: URL('../imgs/contactform.jpeg');
+        background-repeat: no-repeat
+    }
+
+
+    
+    
+    
+}
+
+
 
   }
 
 
-  @media only screen and (max-device-width: 1366px){
-      .parallax{
-          background-attachment: scroll;
-      }
-  }
+
