--- a/css/style.css
+++ b/css/style.css
@@ -12,55 +12,6 @@
     background-color: #113ccf;
 }
 
- .flip-card {
-    background-color: transparent;
-    width: 300px;
-    height: 200px;
-    border: 1px solid #f1f1f1;
-    text-align: center;
-    justify-content: center;
-    margin:auto;
-    padding-bottom: 1px;
-
-}
-
-.flip-card-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transition: transform 0.8s;
-    transform-style: preserve-3d;
-
-
-  }
-
-  .flip-card:hover .flip-card-inner {
-    transform: rotateY(180deg);
-  }
-
-
-  .flip-card-front, .flip-card-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
-
-  }
-
-  .flip-card-front {
-    background-color: #add8e6;
-    color: black;
-  }
-
-
-  .flip-card-back {
-    color: #f1f1f1;
-    transform: rotateY(180deg);
-    background-color: #113ccf;
-    padding-top: 30px;
-  }
-
 
 .parallax{
     padding-left:0px;
@@ -71,6 +22,28 @@
     display: block;
     overflow:hidden;
 }
+
+.flip-card {
+    width: 300px;
+    height: 200px;
+    text-align: center;
+    justify-content: center;
+    margin:auto;
+    padding-bottom: 1px;
+
+}
+
+#classforgallery img{
+    display: block;
+    display: flex;
+    justify-content: space-between;
+    
+
+}
+
+
+
+
 
 
 
@@ -123,6 +96,7 @@ div.Me.Through.the.Years.at.Walt.Disney.World{
 
 
 
+
 #ClassforIndex h2{
     font-family: 'Mouse Memoirs', sans-serif;
     color: #113ccf;
@@ -143,6 +117,15 @@ div.Me.Through.the.Years.at.Walt.Disney.World{
     text-align: center;
     font-size: 25px;
     padding-top: 50px;
+    color: #add8e6;
+}
+
+#classforgallery p{
+    font-family: 'Mouse Memoirs', sans-serif;
+    text-align: center;
+    font-size: 25px;
+    padding-top: 50px;
+    color: #add8e6;
 }
 
 
@@ -414,11 +397,6 @@ button{
 
 @media screen and (min-width: 768px){
 
-    .flip-card{
-        width: 500px;
-    height: 300px;
-    
-    }
 
 
 
@@ -634,11 +612,74 @@ button{
         background-repeat: no-repeat
     }
 
+    .flip-card {
+        background-color: transparent;
+        width: 300px;
+        height: 200px;
+        border: 1px solid #f1f1f1;
+        text-align: center;
+        justify-content: center;
+        margin:auto;
+        padding-bottom: 1px;
+    
+    }
+    
+    .flip-card-inner {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        transition: transform 0.8s;
+        transform-style: preserve-3d;
+    
+    
+      }
+    
+      .flip-card:hover .flip-card-inner {
+        transform: rotateY(180deg);
+      }
+    
+    
+      .flip-card-front, .flip-card-back {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        backface-visibility: hidden;
+    
+      }
+    
+      .flip-card-front {
+        background-color: #add8e6;
+        color: black;
+      }
+    
+    
+      .flip-card-back {
+        color: #f1f1f1;
+        transform: rotateY(180deg);
+        background-color: #113ccf;
+        padding-top: 30px;
+      }
 
-   
+
+      #classforgallery h3{
+        font-family: 'Mouse Memoirs', sans-serif;
+        text-align: center;
+        font-size: 25px;
+        color: #fff;
+    }
+    
+    #classforgallery p{
+        font-family: 'Mouse Memoirs', sans-serif;
+        text-align: center;
+        font-size: 25px;
+        color: #fff;
+    }
+    
     
     
 }
+
 
 
 
