--- a/css/style.css
+++ b/css/style.css
@@ -33,13 +33,7 @@
 
 }
 
-#classforgallery img{
-    display: block;
-    display: flex;
-    justify-content: space-between;
-    
 
-}
 
 
 
@@ -59,6 +53,7 @@ div.Me.Through.the.Years.at.Walt.Disney.World{
 #ClassforIndex img, object, embed{
     width: 500px;
     height: 500px;
+    overflow: auto;
 }
 
 #ClassforIndex{
@@ -116,7 +111,7 @@ div.Me.Through.the.Years.at.Walt.Disney.World{
     font-family: 'Mouse Memoirs', sans-serif;
     text-align: center;
     font-size: 25px;
-    padding-top: 50px;
+    
     color: #add8e6;
 }
 
@@ -124,10 +119,25 @@ div.Me.Through.the.Years.at.Walt.Disney.World{
     font-family: 'Mouse Memoirs', sans-serif;
     text-align: center;
     font-size: 25px;
-    padding-top: 50px;
+   
     color: #add8e6;
 }
 
+
+div.Gallery{
+    display:grid;
+    grid-template-columns: auto;
+    
+}
+
+div.flip-card{
+    border-top: 10px solid #add8e6;
+    border-left: 10px solid #add8e6;
+    border-bottom: 10px solid #add8e6;
+    border-right: 10px solid #add8e6;
+    width: 100%;
+    height: 100%
+}
 
 #classforgallery{
     background-color: #add8e6;
@@ -174,6 +184,7 @@ nav{
     height: 300px;
     margin: auto;
     display: block;
+    overflow: auto;
 
 }
 
@@ -200,6 +211,7 @@ nav{
     height: 300px;
     margin: auto;
     display: block;
+    overflow: auto;
 
     
 }
@@ -245,6 +257,7 @@ a.skip{
     height: 300px;
     margin: auto;
     display: block;
+    overflow: auto;
     
 }
 
@@ -276,6 +289,7 @@ a.skip{
     display: block;
     min-height: 200px;
     width: 200px;
+    overflow: auto;
     
 }
 
@@ -302,7 +316,6 @@ div.grid-container{
 
 
 
-
 footer{
     border: 2px solid rgb(131, 130, 130);
     font-family: 'Mouse Memoirs', sans-serif;
@@ -310,11 +323,10 @@ footer{
     color: #add8e6;
     background-color: rgb(2, 2, 2);
     text-align: center;
-    bottom:0;
-    left:0;
-    padding: 20px;
     width: 100%;
-    font-size: 30px
+    bottom: 0;
+    left: 0;
+    font-size: 30px;
     
 }
 
@@ -393,6 +405,8 @@ button{
     h1{
         animation-name:none;
     }
+
+
 }
 
 @media screen and (min-width: 768px){
@@ -522,6 +536,20 @@ button{
         padding-top: 25px;
         padding-bottom: 25px;
     }
+    div.Gallery{
+        display:grid;
+        grid-template-columns: auto;
+        
+    }
+    
+    div.flip-card{
+        border-top: 10px solid #add8e6;
+        border-left: 10px solid #add8e6;
+        border-bottom: 10px solid #add8e6;
+        border-right: 10px solid #add8e6;
+        width: 100%;
+        height: 100%
+    }
     
 }
 
@@ -533,19 +561,30 @@ button{
     #ClassforIndex img, object, embed {
         width: 500px;
         height: 500px;
+        overflow: auto;
         
 
     }
   
 }
 
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1000px) {
+
+    #classforMagicKingdom p{
+        width: 50%;
+        float: right;
+        font-size: 20px;
+
+    
+    }
+
   
    
     #ClassforIndex img, object, embed {
-        width: 300px;
-        height: 300px;
-        padding-bottom: 25px;
+        width: 500px;
+        height: 500px;
+        
+       
 
     }
 
@@ -555,50 +594,41 @@ button{
     
 
     #classforAnimalKingdom img{
-        width: 600px;
-        height: 600px;
+        width: 350px;
+        height: 350px;
+        
      
-
-        
     }
+
+    #classforAnimalKingdom p{
+        width: 50%;
+        float: right;
+        font-size: 20px;
+    }
+
+
     #classforMagicKingdom img{
-        width: 600px;
-        height: 600px;
+        width: 350px;
+        height: 350px;
+        
 
         
     }
+
+    #classforHollywoodStudios p{
+        width: 50%;
+        float: right;
+        font-size: 20px;
+    }
+
     #classforHollywoodStudios img{
-        width: 600px;
-        height: 600px;
+        width: 350px;
+        height: 350px;
 
         
     }
 
-    #classforEpcot img{
-        min-width: 850px;
-        max-width: 1600px;
-        margin-left: 20px;
-        margin-right: 15px;
-        padding: 20px;
-    
-        
-        
-    }
 
-    div.grid-item{
-        width: 100%;
-        background-color: #113ccf;
-        padding: 10px;
-    
-    
-       
-    
-
-    }
-
-    #classforEpcot p{
-        font-size: 40px;
-    }
 
     .parallax{
         padding-left: 0px;
@@ -661,20 +691,42 @@ button{
         padding-top: 30px;
       }
 
-
       #classforgallery h3{
-        font-family: 'Mouse Memoirs', sans-serif;
-        text-align: center;
-        font-size: 25px;
+        
         color: #fff;
     }
     
     #classforgallery p{
-        font-family: 'Mouse Memoirs', sans-serif;
-        text-align: center;
-        font-size: 25px;
+        
         color: #fff;
     }
+    div.flip-card{
+        border-top: 10px solid #add8e6;
+        border-left: 10px solid #add8e6;
+        border-bottom: 10px solid #add8e6;
+        border-right: 10px solid #add8e6;
+        width: 400px;
+        height: 400px;
+        
+    }
+
+    div.Gallery{
+        display: flex;
+        flex-wrap: wrap;
+        margin-bottom: 20px;
+        margin-left: 20px;
+        margin-right: 20px;
+        justify-content: center;
+
+        
+    }
+
+    .flip-card img{
+        width: 100%;
+        height: 100%
+    }
+
+
     
     
     
