--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,13 @@
 }
 
 
+#classforgallery img{
+    width: 300px;
+    height: 300px
+}
+
+}
+
 .parallax{
     padding-left:0px;
     padding-right: 0px;
@@ -124,11 +131,7 @@ div.Me.Through.the.Years.at.Walt.Disney.World{
 }
 
 
-div.Gallery{
-    display:grid;
-    grid-template-columns: auto;
-    
-}
+
 
 div.flip-card{
     border-top: 10px solid #add8e6;
@@ -550,6 +553,11 @@ button{
         width: 100%;
         height: 100%
     }
+
+    #classforgallery img{
+        width: 400px;
+        height: 400px
+    }
     
 }
 
@@ -570,6 +578,18 @@ button{
 
 @media screen and (min-width: 1000px) {
 
+    div.grid-container{
+        display: grid;
+        grid-template-rows: inherit;
+       grid-template-columns: auto auto;
+       
+    }
+
+  
+
+
+   
+
     #classforMagicKingdom p{
         width: 50%;
         float: right;
@@ -577,6 +597,7 @@ button{
 
     
     }
+
 
   
    
@@ -677,6 +698,8 @@ button{
         backface-visibility: hidden;
     
       }
+
+  
     
       .flip-card-front {
         background-color: #add8e6;
@@ -713,24 +736,25 @@ button{
     div.Gallery{
         display: flex;
         flex-wrap: wrap;
-        margin-bottom: 20px;
-        margin-left: 20px;
-        margin-right: 20px;
+        margin:auto;
         justify-content: center;
+      
 
         
     }
 
     .flip-card img{
         width: 100%;
-        height: 100%
+        height: 100%;
+        padding: 10px;
+        margin: auto;
     }
 
 
-    
-    
-    
 }
+    
+    
+
 
 
 
