--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
     height: 300px
 }
 
-}
+
 
 .parallax{
     padding-left:0px;
@@ -404,13 +404,7 @@ button{
 }
 
 
-@media screen and (prefers-reduced-motion: reduce){
-    h1{
-        animation-name:none;
-    }
 
-
-}
 
 @media screen and (min-width: 768px){
 
@@ -749,6 +743,25 @@ button{
         padding: 10px;
         margin: auto;
     }
+
+
+}
+
+
+@media screen and (prefers-reduced-motion: reduce){
+    h1{
+        animation-name:none;
+    }
+
+    .parallax{
+        background-attachment: scroll;
+    }
+
+     .flip-card:hover .flip-card-inner {
+        transform: none;
+      }
+
+    
 
 
 }
